--- a/src/app/home/header/header.component.css
+++ b/src/app/home/header/header.component.css
@@ -15,7 +15,7 @@ header {
 
 @media only screen and (max-width: 39.9375em) {
     header {
-        height: 275px;
+        height: 300px;
     }
 }
 
@@ -77,5 +77,12 @@ header a.header-btn.subscribe-btn:hover {
     header a.header-btn.facebook-btn,
     header a.header-btn.subscribe-btn {
         font-size: 13px;
+    }
+    header {
+      padding-top: 60px;
+    }
+
+    header h1 {
+        margin-bottom: 15px;
     }
 }
